--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "(gdb) Debug program",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/bin/tarea2",
+            "program": "${workspaceFolder}/bin/generarReporte",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
@@ -36,7 +36,7 @@
         ,
 
         {
-            "name": "(gdb) Debug EnvioServicioPostal tests",
+            "name": "(gdb) Debug tests",
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/bin/tests",
@@ -46,7 +46,7 @@
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
-            "preLaunchTask": "Compile EnvioServicioPostal tests",
+            "preLaunchTask": "Compile tests",
             "setupCommands": [
                 {
                     "description": "Habilitar la impresión con sangría para gdb",
@@ -64,36 +64,7 @@
             
         }
 
-        ,
-        
-        {
-            "name": "(gdb) Debug EnvioFedEx tests",
-            "type": "cppdbg",
-            "request": "launch",
-            "program": "${workspaceFolder}/bin/tests",
-            "args": [],
-            "stopAtEntry": false,
-            "cwd": "${fileDirname}",
-            "environment": [],
-            "externalConsole": false,
-            "MIMode": "gdb",
-            "preLaunchTask": "Compile EnvioFedEx tests",
-            "setupCommands": [
-                {
-                    "description": "Habilitar la impresión con sangría para gdb",
-                    "text": "-enable-pretty-printing",
-                    "ignoreFailures": true
-                },
-                {
-                    "description":  "Establecer tipo de desensamblado en Intel",
-                    "text": "-gdb-set disassembly-flavor intel",
-                    "ignoreFailures": true
-                }
-                
-            ]
-                        
-            
-        }
+    
 
     ]
 }
