Se declararon los streams en el main con los archivos .txt necesarios para generar el reporte. Se generó el reporte en un archivo .csv

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,8 @@
         "new": "cpp",
         "*.tcc": "cpp",
         "random": "cpp",
-        "iosfwd": "cpp"
+        "iosfwd": "cpp",
+        "iomanip": "cpp"
     },
     "C_Cpp.errorSquiggles": "Disabled"
 }
